--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -21,8 +21,8 @@ Container ddev-my-project-web  Running
 Container ddev-my-project-dba  Running
 Container ddev-my-project-db  Running
 Container ddev-router  Running
-Successfully started my-project
-Project can be reached at https://my-project.ddev.site https://127.0.0.1:51046`,
+<span class="text-green-500">Successfully started my-project</span>
+<span class="text-green-500">Project can be reached at https://my-project.ddev.site https://127.0.0.1:51046</span>`,
     },
     {
       clumps: [
@@ -36,16 +36,16 @@ Project can be reached at https://my-project.ddev.site https://127.0.0.1:51046`,
 ├────────────┬──────┬────────────────────────────────────────────┬────────────────────┤
 │ SERVICE    │ STAT │ URL/PORT                                   │ INFO               │
 ├────────────┼──────┼────────────────────────────────────────────┼────────────────────┤
-│ web        │ OK   │ https://my-project.ddev.site               │ php PHP8.1         │
+│ web        │ <span class="text-green-500">OK</span>   │ https://my-project.ddev.site               │ php PHP8.1         │
 │            │      │ InDocker: ddev-my-project-web:443,80,8025  │ nginx-fpm          │
 │            │      │ Host: localhost:51046,51047                │ docroot:''         │
 │            │      │                                            │ NodeJS:16          │
 ├────────────┼──────┼────────────────────────────────────────────┼────────────────────┤
-│ db         │ OK   │ InDocker: ddev-my-project-db:3306          │ mysql:8.0          │
+│ db         │ <span class="text-green-500">OK</span>   │ InDocker: ddev-my-project-db:3306          │ mysql:8.0          │
 │            │      │ Host: localhost:51045                      │ User/Pass: 'db/db' │
 │            │      │                                            │ or 'root/root'     │
 ├────────────┼──────┼────────────────────────────────────────────┼────────────────────┤
-│ PHPMyAdmin │ OK   │ https://my-project.ddev.site:8037          │                    │
+│ PHPMyAdmin │ <span class="text-green-500">OK</span>   │ https://my-project.ddev.site:8037          │                    │
 │            │      │ InDocker: ddev-my-project-dba:80,80        │                    │
 │            │      │ \`ddev launch -p\`                           │                    │
 ├────────────┼──────┼────────────────────────────────────────────┼────────────────────┤
