--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -140,7 +140,7 @@ const title = `Support DDEV`
           />
 
           <figcaption>
-            The pencil icon in the published docs links to the relevant GitHub
+            The edit icon in the published docs links to the relevant GitHub
             source for suggestions.
           </figcaption>
         </figure>
