`drud/ddev` → `ddev/ddev`

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -103,7 +103,7 @@ const releaseData = await getReleases()
             <div class="mt-2 prose">
               <figure>
                 <img
-                  src="https://stars.medv.io/drud/ddev.svg"
+                  src="https://stars.medv.io/ddev/ddev.svg"
                   alt="Sparkline chart of DDEV’s GitHub stars over time"
                 />
                 <figcaption>
