Shorten script URL.
Related to https://github.com/ddev/ddev/pull/4738.

--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -69,7 +69,7 @@ const { latestVersion } = Astro.props
   <Fragment slot="Install Script">
     <div class="prose py-5">
       <Terminal
-        code={`→ curl -fsSL https://raw.githubusercontent.com/ddev/ddev/master/scripts/install_ddev.sh | bash`}
+        code={`→ curl -fsSL https://ddev.com/install.sh | bash`}
       />
     </div>
   </Fragment>
