Update sponsor links.

--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -81,7 +81,7 @@ const title = `Support DDEV`
       <div class="mt-6 mb-24 lg:flex lg:w-2/5">
         <CtaButton
           text="Join Our GitHub Sponsors →"
-          href="https://github.com/sponsors/rfay"
+          href="https://github.com/sponsors/ddev"
           type="hollow"
           target="_blank"
         />
