--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -32,9 +32,9 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
       </div>
     </div>
 
-    <div class="mt-8 text-slate-500">
-      <ul class="flex space-x-7">
-        <li>
+    <div class="mt-4 text-slate-500 max-w-2xl px-6 lg:px-0">
+      <ul class="flex flex-wrap space-x-7 justify-center md:justify-start">
+        <li class="whitespace-nowrap my-1">
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><Icon name="Apple" />
           </span>
@@ -49,17 +49,17 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
             Intel
           </div>
         </li>
-        <li>
+        <li class="whitespace-nowrap my-1">
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><Icon name="Windows" />
           </span>Windows
         </li>
-        <li>
+        <li class="whitespace-nowrap my-1">
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><Icon name="Linux" />
           </span>Linux
         </li>
-        <li>
+        <li class="whitespace-nowrap my-1">
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><CloudIcon />
           </span>Cloud
