--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,6 +2,7 @@
 /**
  * The large, leading copy and image used on the homepage.
  */
+import Badge from "@components/Badge.astro"
 import CtaButton from "@components/CtaButton.astro"
 import Icon from "@components/Icon.astro"
 import AnimatedTerminal from "./AnimatedTerminal.astro"
@@ -38,16 +39,7 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><Icon name="Apple" />
           </span>
-          macOS <div
-            class="inline-block border rounded text-xs px-1 py-0 relative bottom-px"
-          >
-            Apple
-          </div>
-          <div
-            class="inline-block border rounded text-xs px-1 py-0 relative bottom-px"
-          >
-            Intel
-          </div>
+          macOS <Badge>M1</Badge><Badge>M2</Badge><Badge>Intel</Badge>
         </li>
         <li class="whitespace-nowrap my-1">
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
@@ -63,16 +55,7 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><CloudIcon />
           </span>Cloud
-          <div
-            class="inline-block border rounded text-xs px-1 py-0 relative bottom-px"
-          >
-            Codespaces
-          </div>
-          <div
-            class="inline-block border rounded text-xs px-1 py-0 relative bottom-px"
-          >
-            Gitpod
-          </div>
+          <Badge>Codespaces</Badge><Badge>Gitpod</Badge>
         </li>
       </ul>
     </div>
