--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -75,7 +75,7 @@ const title = `Support DDEV`
       </div>
 
       <div class="mt-4 mb-8 max-w-2xl">
-        <Sponsors />
+        <Sponsors includeFeatured={true} />
       </div>
 
       <div class="mt-6 mb-24 lg:flex lg:w-2/5">
