--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -9,7 +9,11 @@ import {
   GITHUB_URL,
 } from "../const"
 import Sponsors from "../components/Sponsors.astro"
-import { Img } from "astro-imagetools/components"
+import { Image } from "@astrojs/image/components"
+import prImage from "../../public/img/pr.png"
+import discordImage from "../../public/img/discord.png"
+import docsImage from "../../public/img/edit-docs.png"
+import advisoryImage from "../../public/img/advisory-group-call.png"
 
 const title = `Support DDEV`
 ---
@@ -43,15 +47,13 @@ const title = `Support DDEV`
           > a GitHub Issue or Pull Request.
         </p>
 
-        <Img
-          src="/img/pr.png"
+        <Image
+          src={prImage}
+          width={1200}
+          aspectRatio={1352 / 725}
           alt="Screenshot of GitHub PR #217, where @beeradb added new version notifications"
-          placeholder="dominantColor"
-          attributes={{
-            img: {
-              class: `shadow-lg rounded-lg`,
-            },
-          }}
+          class="shadow-lg rounded-lg"
+          loading={`lazy`}
         />
       </div>
 
@@ -95,15 +97,12 @@ const title = `Support DDEV`
           development.
         </p>
 
-        <Img
-          src="/img/discord.png"
+        <Image
+          src={discordImage}
+          width={1200}
+          aspectRatio={1352 / 725}
           alt="Screenshot of Discord server, with several active Q&A channels"
-          placeholder="dominantColor"
-          attributes={{
-            img: {
-              class: `rounded-lg`,
-            },
-          }}
+          class="rounded-lg"
         />
       </div>
 
@@ -128,15 +127,13 @@ const title = `Support DDEV`
         </p>
 
         <figure>
-          <Img
-            src="/img/edit-docs.png"
+          <Image
+            src={docsImage}
+            width={1200}
+            aspectRatio={1352 / 725}
             alt="Screenshot visually highlighting the “Edit this page” icon in the docs and pointing to its corresponding GitHub URL"
-            placeholder="dominantColor"
-            attributes={{
-              img: {
-                class: `rounded-lg`,
-              },
-            }}
+            class="rounded-lg"
+            loading={`lazy`}
           />
 
           <figcaption>
@@ -204,15 +201,13 @@ const title = `Support DDEV`
           to join us!
         </p>
 
-        <Img
-          src="/img/advisory-group-call.png"
+        <Image
+          src={advisoryImage}
+          width={1200}
+          aspectRatio={1352 / 725}
           alt="Screenshot of an advisory group Zoom call with a grid of sixteen faces"
-          placeholder="dominantColor"
-          attributes={{
-            img: {
-              class: `rounded-lg`,
-            },
-          }}
+          class="rounded-lg"
+          loading={`lazy`}
         />
       </div>
 
