--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import SoftwareLogos from "@components/SoftwareLogos.astro"
 import { GITHUB_REPO } from "../const"
 ---
 
-<Layout title={`Start new DDEV projects in seconds. Customize, share, and extend with ease.`}>
+<Layout title={``} description={`Local development environments in seconds. Customize, share, and extend with ease.`}>
   <main>
     <Hero />
 
