But not an empty `og:title`.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -106,7 +106,7 @@ import "../styles/global.css"
       charset={`utf-8`}
       openGraph={{
         basic: {
-          title: title,
+          title: title !== '' ? title : 'DDEV',
           url: canonicalUrl,
           type: `website`,
           image: ogImage ? ogImage : `${Astro.site}img/og-default.png`,
