--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -43,6 +43,10 @@ const title = `Support DDEV`
           > a GitHub Issue or Pull Request.
         </p>
 
+        <aside class="w-full rounded border-1 bg-blue-100/50 px-4 leading-tight font-mono text-sm">
+          <p class="py-4">💡 Check out <a href="/training">contributor training</a> for ideas and best practices.</p>
+        </aside>
+
         <Img
           src="/img/pr.png"
           alt="Screenshot of GitHub PR #217, where @beeradb added new version notifications"
