New form with newsletter tag added

--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -21,6 +21,9 @@ const title = `Newsletter Signup`
 >
   <main class="max-w-4xl mx-auto mb-24">
     <Heading title={title} subtitle={`Newsletter Signup`} />
+
+    <!-- NEW FORM GOES BELOW HERE -->
+
     <!-- Note :
        - You can modify the font style and form style to suit your website.
        - Code lines with comments Do not remove this code are required for the form to work properly, make sure that you do not remove these lines of code.
@@ -270,4 +273,7 @@ const title = `Newsletter Signup`
         </script>
       </form>
     </div>
+
+    <!--NEW FORM ENDS HERE-->
+
   </main>
