Fix up footer, social was missing, add org

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,9 +16,10 @@ import Icon from "./Icon.astro"
 
 const navigation = {
   support: [
-    { name: "Documentation", href: DOCUMENTATION_URL },
-    { name: "GitHub Issues", href: GITHUB_ISSUES_URL },
+    { name: "Docs", href: DOCUMENTATION_URL },
+    { name: "Issues", href: GITHUB_ISSUES_URL },
     { name: "Discord", href: DISCORD_URL },
+    { name: "Email", mailto: "support (at) ddev.com" }
   ],
   product: [
     { name: "About", href: "/about" },
@@ -45,6 +46,17 @@ const navigation = {
       me: true
     },
   ],
+  organization: [
+    {
+      name: "Foundation",
+      href: "foundation",
+    },
+    {
+      name: "Newsletter",
+      href: "newsletter",
+    },
+
+  ],
 }
 ---
 
@@ -52,7 +64,7 @@ const navigation = {
   <div class="max-w-4xl mx-auto py-12 px-6 lg:px-0 lg:py-16">
     <div class="pb-8 xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="grid grid-cols-2 gap-8 xl:col-span-4">
-        <div class="md:grid md:grid-cols-2 md:gap-8">
+        <div class="md:grid md:grid-cols-4 md:gap-8">
           <div class="mt-12 md:mt-0">
             <h2 class="text-sm font-mono text-navy-300 tracking-wider">
               Support
@@ -85,6 +97,39 @@ const navigation = {
                       {item.name}
                     </a>
                   </li>
+                ))
+              }
+            </ul>
+          </div>
+          <div class="mt-12 md:mt-0">
+            <h2 class="text-sm font-mono text-navy-300 tracking-wider">
+              Social
+            </h2>
+            <ul class="mt-4 space-y-4">
+              {
+                navigation.social.map((item) => (
+                    <li>
+                      <a href={item.href} class="text-base" rel="prefetch">
+                        {item.name}
+                      </a>
+                    </li>
+                ))
+              }
+            </ul>
+          </div>
+
+          <div class="mt-12 md:mt-0">
+            <h2 class="text-sm font-mono text-navy-300 tracking-wider">
+              Organization
+            </h2>
+            <ul class="mt-4 space-y-4">
+              {
+                navigation.organization.map((item) => (
+                    <li>
+                      <a href={item.href} class="text-base" rel="prefetch">
+                        {item.name}
+                      </a>
+                    </li>
                 ))
               }
             </ul>
